--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>Hope this works</title>
 	<div id="output"> <thing id="img"></thing><p id="copyright"></p><h1 id="title"></h1><p id="explanation"></p></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
 		$.ajax({
 			url:"https://api.nasa.gov/planetary/apod?api_key=f1NN7ANpqHGvZkORKVl5H8jvXxgAGk9jpWMOOhx0",
