added import in html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<title>Hope this works</title>
+	<title>Hope this thing works</title>
 	<div id="output"> <thing id="img"></thing><p id="copyright"></p><h1 id="title"></h1><p id="explanation"></p></div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script>
-
-	</script>
+	<script src="js/script.js"></script>
 </head>
