--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<title>Hope this thing works</title>
-	<div id="output"> <thing id="img"></thing><p id="copyright"></p><h1 id="title"></h1><p id="explanation"></p></div>
+	<title>I think this thing actually works</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/script.js"></script>
+	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
+	<body>
+		<div id="output">
+			<div id="img"></div>
+			<h1 id="title"></h1>
+			<h3 id="date"></h3>
+			<p id="explanation"></p>
+		</div>
+	</body>
