--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>I think this thing actually works</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/script.js"></script>
+	<script type='text/javascript' src='config.js'></script>
 	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 	<body>
